welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: Missing closing brace `}' assumed here
for (j<- 0 to 6){	
^