welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	 var cpt=0
for (j<- 0 to 6){	
	 for (i<- 0 to 6){
	 	setPos(j,i)
	 	ecritMessage(x);
          x=x+1	 
}
}
